--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                             <p>Busco crescer profissionalmente e alcançar um conforto financeiro que me permita realizar meus sonhos pessoais, como adquirir minha casa própria, ter um carro na garagem e formar uma bela família. Busco oportunidades que me permitam desenvolver habilidades e contribuir para o sucesso da empresa, sendo assim... meu sucesso.</p>
                             <p><b>Universidade nove de julho</b>, AV. Professor Luiz Ignácio Anhaia 
                                 Mello, 1363</p>
-                            <a class="btn-solid-reg" href="https://api.whatsapp.com/send?phone=5511917314405&text=Boa%20noite,%20peguei%20seu%20contato%20pelo%20curr%C3%ADculo%20digital%20e%20quero%20marcar%20uma%20entrevista%20com%20voc%C3%AA.">Whatsapp</a>
+                            <a class="btn-solid-reg" href="https://api.whatsapp.com/send?phone=5511917314405&text=Ol%C3%A1,%20peguei%20seu%20contato%20pelo%20curr%C3%ADculo%20digital%20e%20quero%20marcar%20uma%20entrevista%20com%20voc%C3%AA.">Whatsapp</a>
                             <a class="btn-outline-reg page-scroll" href="#contact">CONTATOS</a>
                         </div> <!-- end of text-container -->
                         <div class="image-container">
