--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             </div> <!-- end of services-image -->
                             <div class="services-text">
                                 <h2>DESENVOLVIMENTO</h2>
-                                <p>Sou bem comunicativo com um pensamento critico usando bem a inteligência emocional mantendo o foco no resultado. </p>
+                                <p>Sou bem comunicativo com um pensamento analítico usando bem a inteligência emocional mantendo o foco no resultado. </p>
                             </div> <!-- end of services-text -->
                         </div> <!-- end of services-container -->
                     </div> <!-- end of col -->
