--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div> <!-- end of col -->
                     <div class="col-xl-7 right-wrapper">
                         <div class="text-container">
-                            <h1 id="js-rotating" class="h1-large">DEDICAÇAO, DETERMINAÇÃO, CURIOSIDADE, HUMILDADE</h1>
+                            <h1 id="js-rotating" class="h1-large">DEDICADO, DETERMINADO, CURIOSO, HUMILDADE</h1>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
