--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div> <!-- end of col -->
                     <div class="col-xl-7 right-wrapper">
                         <div class="text-container">
-                            <h1 id="js-rotating" class="h1-large">DEDICADO, DETERMINADO, CURIOSO, HUMILDADE</h1>
+                            <h1 id="js-rotating" class="h1-large">DEDICADO, DETERMINADO, CURIOSO, HUMILDE</h1>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
@@ -121,7 +121,7 @@
                             </div> <!-- end of services-image -->
                             <div class="services-text">
                                 <h2>DESENVOLVIMENTO</h2>
-                                <p>Sou bem comunicativo com um pensamento analítico usando bem a inteligência emocional mantendo o foco no resultado. </p>
+                                <p>Sou bem comunicativo com um pensamento analítico mantendo o foco no resultado. </p>
                             </div> <!-- end of services-text -->
                         </div> <!-- end of services-container -->
                     </div> <!-- end of col -->
