--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                             </div> <!-- end of services-image -->
                             <div class="services-text">
                                 <h2>DESENVOLVIMENTO</h2>
+                                <p>Representante de turma pelo 4º Semestre consecutivo. </p>
                                 <p>Sou bem comunicativo com um pensamento analítico mantendo o foco no resultado. </p>
                             </div> <!-- end of services-text -->
                         </div> <!-- end of services-container -->
@@ -175,7 +176,7 @@
                         </div> <!-- end of image-container -->
                         <div class="text-container">
                             <h2>OBJETIVO</h2>
-                            <p>Sou estudante tecnólogo em Análise e
+                            <p>Sou estudante em Análise e
                                 Desenvolvimento de Sistemas e estou em busca de 
                                 uma oportunidade de estágio em uma empresa que 
                                 me permita aprender e aprimorar habilidades na área 
