--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             </div> <!-- end of services-image -->
                             <div class="services-text">
                                 <h2>DESENVOLVIMENTO</h2>
-                                <p>Representante de turma pelo 4º Semestre consecutivo. </p>
+                                <p>Ultima empresa atuando como chefe de patio em oficina, onde liderava a equipe de mecânicos. </p>
                                 <p>Sou bem comunicativo com um pensamento analítico mantendo o foco no resultado. </p>
                             </div> <!-- end of services-text -->
                         </div> <!-- end of services-container -->
