--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                             </div> <!-- end of services-image -->
                             <div class="services-text">
                                 <h2>DESENVOLVIMENTO</h2>
-                                <p>Ultima empresa atuando como chefe de patio em oficina, onde liderava a equipe de mecânicos. </p>
-                                <p>Sou bem comunicativo com um pensamento analítico mantendo o foco no resultado. </p>
+                                <p>Ultima empresa atuando como chefe de pátio em oficina, onde liderava a equipe de mecânicos. </p>
+                                <p>Onde também fui promovido ao setor de vendas, recepcionando clientes, oferecendo produtos e participando da execulsao. </p>
                             </div> <!-- end of services-text -->
                         </div> <!-- end of services-container -->
                     </div> <!-- end of col -->
