--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             <div class="services-text">
                                 <h2>DESENVOLVIMENTO</h2>
                                 <p>Ultima empresa atuando como chefe de pátio em oficina, onde liderava a equipe de mecânicos. </p>
-                                <p>Onde também fui promovido ao setor de vendas, recepcionando clientes, oferecendo produtos e participando da execulsao. </p>
+                                <p>Onde também fui promovido ao setor de vendas, recepcionando clientes, oferecendo produtos e participando da execução. </p>
                             </div> <!-- end of services-text -->
                         </div> <!-- end of services-container -->
                     </div> <!-- end of col -->
